# HelloCV

./: README.md
CLM_framework_For_Android/: README.md
CLM_framework_For_Android/app/: CMakeLists.txt  build.gradle
CLM_framework_For_Android/app/src/androidTest/java/com/martin/ads/clm4android/: ExampleInstrumentedTest.java
CLM_framework_For_Android/app/src/main/: AndroidManifest.xml
CLM_framework_For_Android/app/src/main/cpp/: native-lib.cpp
CLM_framework_For_Android/app/src/main/cpp/include/: CCNF_patch_expert.h  CLM.h  CLMParameters.h  CLMTracker.h  CLM_core.h  CLM_utils.h  DetectionValidator.h  PAW.h  PDM.h  Patch_experts.h  SVR_patch_expert.h  common.h
CLM_framework_For_Android/app/src/main/cpp/src/: CCNF_patch_expert.cpp  CLM.cpp  CLMTracker.cpp  CLM_utils.cpp  DetectionValidator.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp  common.cpp
CLM_framework_For_Android/app/src/main/java/com/martin/ads/clm4android/: MainActivity.java  ModelActivity.java  ZipHelper.java
CLM_framework_For_Android/app/src/main/res/layout/: activity_main.xml
CLM_framework_For_Android/app/src/main/res/values/: strings.xml
CLM_framework_For_Android/app/src/test/java/com/martin/ads/clm4android/: ExampleUnitTest.java
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/OpenCVLibrary320/: build.gradle
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/OpenCVLibrary320/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/: CMakeLists.txt  build.gradle
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/androidTest/java/com/martin/ads/orb_slam2_android/: ExampleInstrumentedTest.java
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/main/: AndroidManifest.xml
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/main/cpp/: native-lib.cpp
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/main/cpp/src/: System.cc  Tracking.cc
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/main/java/com/martin/ads/orb_slam2_android/: FPSUpdater.java  MainActivity.java  ModelActivity.java  ZipHelper.java
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/main/res/layout/: activity_main.xml
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/main/res/values/: strings.xml
ORB_SLAM2/ORB_SLAM2_Android/ORB_SLAM2_Android/app/src/test/java/com/martin/ads/orb_slam2_android/: ExampleUnitTest.java
ORB_SLAM2/ORB_SLAM2_Windows_AR/: CMakeLists.txt
ORB_SLAM2/ORB_SLAM2_Windows_AR/Examples/Monocular/ar/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc  ros_mono_ar_tum.cc
ORB_SLAM2/ORB_SLAM2_Windows_AR/include/: Common.h  System.h
ORB_SLAM2/ORB_SLAM2_Windows_AR/src/: LocalMapping.cc  LoopClosing.cc  System.cc
